--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <h1>My Contact Details</h1>
 <p>
-    Address: N3-324, Shandong University Qingdao Campus, Qingdao, China
+    Address:Shandong University Qingdao Campus, Qingdao, China
     Email:gaoger@live.com
-    Phone:(+86)18669856069
+    Phone:(+86)18669850000
 </p>
 <hr/>
